--- a/complete/src/main/resources/templates/result.html
+++ b/complete/src/main/resources/templates/result.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<h1>Result</h1>
-    <p th:text="'id: ' + ${greeting.id}" />
-    <p th:text="'content: ' + ${greeting.content}" />
+    <p th:text="'id: ' + ${greetingData.id}" />
+    <p th:text="'content: ' + ${greetingData.content}" />
     <a href="/greeting">Submit another message</a>
 </body>
 </html>
